objects/SIC_SFDC2__c.object
<CustomObject>
    <description>Look up to Standard Industrial Classification to classify industries. SFDC2</description>
    <fields>
        <fullName>SIC2_Code__c</fullName>
        <description>2 digit Standard Industrial Classfication Code</description>
        <inlineHelpText>2 digit Standard Industrial Classfication Code</inlineHelpText>
        <label>SIC2 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC2_Description__c</fullName>
        <description>Description text of 2 digit Standard Industrial Classification Code</description>
        <inlineHelpText>Description text of 2 digit Standard Industrial Classification Code</inlineHelpText>
        <label>SIC2 Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC4_Code__c</fullName>
        <description>4 digit Standard Industrial Classification Code</description>
        <externalId>true</externalId>
        <inlineHelpText>4 digit Standard Industrial Classification Code</inlineHelpText>
        <label>SIC4 Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SIC4_Description__c</fullName>
        <description>Description text of 4 digit Standard Industrial Classification Code</description>
        <inlineHelpText>Description text of 4 digit Standard Industrial Classification Code</inlineHelpText>
        <label>SIC4 Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC6_Code__c</fullName>
        <description>6 digit Standard Industrial Classification Code</description>
        <inlineHelpText>6 digit Standard Industrial Classification Code</inlineHelpText>
        <label>SIC6 Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC6_Description__c</fullName>
        <description>Description text of 6 digit Standard Industrial Classification Code</description>
        <inlineHelpText>Description text of 6 digit Standard Industrial Classification Code</inlineHelpText>
        <label>SIC6 Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SIC</label>
    <nameField>
        <label>SIC Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>